# CPP-Pong

./: CMakeLists.txt  README.md  REF.md  main.exec
.cache/clangd/index/: add.cpp.D5CAC951EDEA2621.idx  add.h.34C4468B2E61FDF7.idx  ball.cpp.BBA06B352917FB64.idx  main.cpp.135963A3AA8DABA7.idx  main.cpp.BBCD1A5EF213E902.idx
buildOut/: projectRunable
includes/: ball.h  logger.h
src/: Application.cpp  ball.cpp  logger.cpp  main.cpp  opengl-window.cpp
